--- a/src/app/pages/navsm/navsm.component.html
+++ b/src/app/pages/navsm/navsm.component.html
@@ -30,7 +30,7 @@
           <li class="nav-item" *ngIf="userType ===2">
             <a class="nav-link" routerLink="/complete">Completas</a>
           </li>
-          <li class="nav-item" *ngIf="userType ===1">
+          <li class="nav-item" *ngIf="userType ===1 || userType ===2">
             <a class="nav-link" routerLink="/ListaOrdenes">Historial</a>
           </li>
           <li class="nav-item" *ngIf="userType ===1">
